# zero2prod

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  README.md  example.spec.yaml  spec.yaml
.github/workflows/: general.yml
configuration/: base.yaml  production.yaml
docs/: 01-intro-setup.md  02-requirements.md  03-start-building.md  04-telemetry.md  05-deployment.md  06-validation.md  07-confirmation.md  1.md
migrations/: 20230101141936_add_status_to_subscriptions.sql
scripts/: init_db.sh
src/: configuration.rs  email_client.rs  lib.rs  main.rs  startup.rs  telemetry.rs
src/domain/: subscriber_email.rs  subscriber_name.rs
src/routes/: subscriptions.rs  subscriptions_confirm.rs
tests/: health_check.rs
tests/api/: health_check.rs  helpers.rs  subscriptions.rs  subscriptions_confirm.rs
