[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true  # Automatically strip symbols from the binary.

[dependencies]
actix-web = "4"
chrono = "0.4"
config = "0.12"
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.5"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
uuid = { version = "0.8", features = ["v4"] }

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.5"
default-features = false
features = [
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "runtime-actix-rustls",
    "uuid"
]

[dev-dependencies]
reqwest = "0.11"
once_cell = "1"
