[package]
name = "zero2prod"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
path = "src/lib.rs"

[[bin]]
path = "src/main.rs"
name = "zero2prod"

[profile.release]
codegen-units = 1
lto = true
panic = "abort"
strip = true  # Automatically strip symbols from the binary.

[dependencies]
actix-web = "4"
chrono = { version = "0.4", default-features = false }
config = { version = "0.13", default-features = false, features = ["yaml"] }
rand = { version = "0.8", features = ["std_rng"] }
secrecy = { version = "0.8", features = ["serde"] }
serde = { version = "1", features = ["derive"]}
serde-aux = "3"
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
tracing = { version = "0.1", features = ["log"] }
tracing-actix-web = "0.6"
tracing-bunyan-formatter = "0.3"
tracing-log = "0.1"
tracing-subscriber = { version = "0.3", features = ["registry", "env-filter"] }
unicode-segmentation = "1.10"
uuid = { version = "1", features = ["v4", "serde"] }
validator = "0.16"

# Using table-like toml syntax to avoid a super-long line!
[dependencies.sqlx]
version = "0.6"
default-features = false
features = [
    "runtime-tokio-rustls",
    "chrono",
    "macros",
    "migrate",
    "offline",
    "postgres",
    "uuid"
]

[dependencies.reqwest]
version = "0.11"
default-features = false
features = ["json", "rustls-tls"]

[dev-dependencies]
claim = "0.5"
fake = "2.5"
linkify = "0.9"
once_cell = "1"
quickcheck = "1"
quickcheck_macros = "1"
rand = "0.8"
serde_json = "1"
tokio = { version = "1", features = ["rt", "macros"] }
wiremock = "0.5"
